Hice el banner de origen

--- a/secciones/Origen.html
+++ b/secciones/Origen.html
@@ -35,16 +35,17 @@
     </header>
     <!--Contenido principal-->
     <main class="conteiner__mainOrigen">
-        <h1 class="texto__tituloOrigen">
-          Antes de conocer su historia, es importante conocer de qué se trata el
-          Vaporwave
-        </h1>
+      <section class="hero__origen">
+        <h1 class="texto__tituloOrigen">Antes de conocer su historia, es importante conocer de qué se trata el
+        Vaporwave</h1>
         <h2 class="texto__subtituloOrigen">
           Este concepto, es utilizado para representar a un movimiento artístico
           nativamente digital, tratándose de una corriente <br> contracultural que
           mezcla lo estético y auditivo con la intención de recuperar elementos
           que tiempo atrás fueron desprestigiados.
         </h2>
+      </h1>
+      </section>
         <div class="conteiner__txtOrigen">
           <p class="texto__principalOrigen">
             Entre 2011 y 2012, jóvenes artistas comenzaron a crear remixes de
@@ -63,22 +64,9 @@
             definieron el Vaporwave.
           </p>
         </div>
-        <div class="textoparahacercosas"><h1>js</h1></div>
-        <div class="textoparahacercosas"><h1>js</h1></div>
-        <div class="textoparahacercosas"><h1>js</h1></div>
-        <div class="textoparahacercosas"><h1>js</h1></div>
-        <div class="textoparahacercosas"><h1>js</h1></div>
-        <div class="textoparahacercosas"><h1>js</h1></div>
-        <div class="textoparahacercosas"><h1>js</h1></div>
-        <div class="textoparahacercosas"><h1>js</h1></div>
-        <div class="textoparahacercosas"><h1>js</h1></div>
-        <div class="textoparahacercosas"><h1>js</h1></div>
-        <div class="textoparahacercosas"><h1>js</h1></div>
-        <div class="textoparahacercosas"><h1>js</h1></div>
-        <div class="textoparahacercosas"><h1>js</h1></div>
-        <div class="textoparahacercosas"><h1>js</h1></div>
-        <div class="textoparahacercosas"><h1>js</h1></div>
-        <div class="textoparahacercosas"><h1>js</h1></div>
+        <!--Tarjetas de información por año-->
+        
+       
     </main>
     <!--Pie de página-->
     <footer>
