comencé a realizar las tarjetas de la sección origen

--- a/secciones/Origen.html
+++ b/secciones/Origen.html
@@ -46,27 +46,37 @@
         </h2>
       </h1>
       </section>
-        <div class="conteiner__txtOrigen">
-          <p class="texto__principalOrigen">
-            Entre 2011 y 2012, jóvenes artistas comenzaron a crear remixes de
-            canciones de los 70 y 80, mezclándolos con smooth jazz y música
-            lounge, creando un género nuevo y extraño, una especie de “música
-            triste de ascensor”.<br />
-            A través de Last.fm, Reddit, Bandcamp, Tumblr, 4chan y otros canales
-            online, estos artistas comenzaron a compartir sus creaciones,
-            inspirando y propagando todo un meme estético que consiguió echar
-            raíces en la red.<br />
-            Una de las artistas más importantes de este género fue Vektroid,
-            cuyo álbum
-            <a href="./Musica.html" target="_blank">
-              <strong>“Floral Shoppe”</strong></a>
-            se convirtió en uno de los cánones musicales y estéticos que
-            definieron el Vaporwave.
-          </p>
-        </div>
         <!--Tarjetas de información por año-->
-        
-       
+        <div class="container__cardsOrigen">
+          <div class="cardOrigen">
+            <div class="imgCard"></div>
+          </div>
+          <div class="content_Card">
+            <div>
+              <h3>80 y 90</h3>
+              <p>El nombre de este género se refiere a estas promesas fallidas y su música y estética nos ofrece una historia alternativa del mundo de la infancia de los millenials
+                el Vaporwave tiene también un elemento social. <br>
+                Los jóvenes artistas recuerdan los 80 y 90 no sólo como parte de su infancia, sino también como una época previa a la crisis económica, echando la vista atrás al consumismo desorbitado que marcó la cultura popular de las últimas décadas del siglo XX
+                Por otro lado, la locura por los 90 y 80 y la inspiración en diseño gráfico “vintage” ya eran grandes influencias de los últimos años en el mundo del diseño gráfico</p>
+            </div>
+          </div>
+        </div>
+        <div class="cardOrigen">
+          <div class="imgCard"></div>
+        </div>
+        <div class="content_Card">
+          <div>
+            <h3>2010 y 2011</h3>
+            <p>Entre 2011 y 2012, jóvenes artistas comenzaron a crear remixes de
+              canciones de los 70 y 80, mezclándolos con smooth jazz y música
+              lounge, creando un género nuevo y extraño, una especie de “música
+              triste de ascensor”.<br />
+              A través de Last.fm, Reddit, Bandcamp, Tumblr, 4chan y otros canales
+              online, estos artistas comenzaron a compartir sus creaciones,
+              inspirando y propagando todo un meme estético que consiguió echar
+              raíces en la red.</p>
+          </div>
+        </div>
     </main>
     <!--Pie de página-->
     <footer>
