pusiste fondo a la sección de imagen, y centraste el texto del footer de index

--- a/secciones/Contacto.html
+++ b/secciones/Contacto.html
@@ -30,7 +30,7 @@
         </nav>
     </header>
     <!--Contenido principal-->
-    <main class="conteiner__main">
+    <main class="conteiner__mainFormulario">
         <h3 class="titulo__delFormulario">Interactúa con la página</h3>
         <h1 class="subtitulo__delFormulario">Si es de su interes ser notificado por nuevas publicaciones del sitio, complete el siguiente formulario</h1>
         <form action="#" method="get" class="formulario-conteiner">
