--- a/secciones/Origen.html
+++ b/secciones/Origen.html
@@ -66,7 +66,7 @@
         </div>
         <div class="content_Card">
           <div>
-            <h3>2010 y 2011</h3>
+            <h3>2011 y 2012</h3>
             <p>Entre 2011 y 2012, jóvenes artistas comenzaron a crear remixes de
               canciones de los 70 y 80, mezclándolos con smooth jazz y música
               lounge, creando un género nuevo y extraño, una especie de “música
@@ -85,14 +85,10 @@
         <li>
           <a href="https://www.instagram.com/franbacchiddu" target="_blank"
             >Instagram</a
-          >
-        </li>
-        <li>
-          <a
+            <a
             href="https://www.youtube.com/channel/UCJU2Jyk8zLe4NfeGQlUgdlA"
-            target="_blank"
-            >Youtube</a
-          >
+            target="_blank">Youtube
+          </a>
         </li>
       </ol>
     </footer>
