pusiste un hero en formulario y acomodaste la imagen

--- a/secciones/Contacto.html
+++ b/secciones/Contacto.html
@@ -31,8 +31,10 @@
     </header>
     <!--Contenido principal-->
     <main class="conteiner__mainFormulario">
+        <section class="banner-heroForm">
         <h3 class="titulo__delFormulario">Interactúa con la página</h3>
         <h1 class="subtitulo__delFormulario">Si es de su interes ser notificado por nuevas publicaciones del sitio, complete el siguiente formulario</h1>
+    </section>
         <form action="#" method="get" class="formulario-conteiner">
             <br><br>
             <span>Campo 1</span>
