--- a/secciones/Origen.html
+++ b/secciones/Origen.html
@@ -85,10 +85,14 @@
         <li>
           <a href="https://www.instagram.com/franbacchiddu" target="_blank"
             >Instagram</a
-            <a
+          >
+        </li>
+        <li>
+          <a
             href="https://www.youtube.com/channel/UCJU2Jyk8zLe4NfeGQlUgdlA"
-            target="_blank">Youtube
-          </a>
+            target="_blank"
+            >Youtube</a
+          >
         </li>
       </ol>
     </footer>
