Coloqué unas cartas debajo del hero, falta responsive

--- a/secciones/Origen.html
+++ b/secciones/Origen.html
@@ -44,13 +44,13 @@
           mezcla lo estético y auditivo con la intención de recuperar elementos
           que tiempo atrás fueron desprestigiados.
         </h2>
-      </h1>
       </section>
         <!--Tarjetas de información por año-->
         <div class="container__cardsOrigen">
           <div class="cardOrigen">
-            <div class="imgCard"></div>
-          </div>
+            <div class="imgCard" data-text="Inicios">
+              <img src="../recursos/cuadro1980-1990.png" alt="">
+            </div>
           <div class="content_Card">
             <div>
               <h3>80 y 90</h3>
@@ -61,22 +61,24 @@
             </div>
           </div>
         </div>
-        <div class="cardOrigen">
-          <div class="imgCard"></div>
+      <div class="cardOrigen">
+        <div class="imgCard" data-text="Ahora">
+          <img src="../recursos/cuadro2011-2012.png" alt="">
         </div>
-        <div class="content_Card">
-          <div>
-            <h3>2011 y 2012</h3>
-            <p>Entre 2011 y 2012, jóvenes artistas comenzaron a crear remixes de
-              canciones de los 70 y 80, mezclándolos con smooth jazz y música
-              lounge, creando un género nuevo y extraño, una especie de “música
-              triste de ascensor”.<br />
-              A través de Last.fm, Reddit, Bandcamp, Tumblr, 4chan y otros canales
-              online, estos artistas comenzaron a compartir sus creaciones,
-              inspirando y propagando todo un meme estético que consiguió echar
-              raíces en la red.</p>
-          </div>
+      <div class="content_Card">
+        <div>
+          <h3>2011 y 2012</h3>
+          <p>Entre 2011 y 2012, jóvenes artistas comenzaron a crear remixes de
+            canciones de los 70 y 80, mezclándolos con smooth jazz y música
+            lounge, creando un género nuevo y extraño, una especie de “música
+            triste de ascensor”.<br />
+            A través de Last.fm, Reddit, Bandcamp, Tumblr, 4chan y otros canales
+            online, estos artistas comenzaron a compartir sus creaciones,
+            inspirando y propagando todo un meme estético que consiguió echar
+            raíces en la red.</p>
         </div>
+      </div>
+    </div>
     </main>
     <!--Pie de página-->
     <footer>
