--- a/secciones/Estética.html
+++ b/secciones/Estética.html
@@ -83,7 +83,7 @@
                         <div class="image">
                             <img src="../recursos/animeyestatuas.jpg" alt="animevibes">
                         </div>
-                        <div class="text">Anime vibes</div>
+                        <div class="text">Anime Vibes</div>
                     </div>
                 </div>
 
@@ -101,7 +101,7 @@
                         <div class="image">
                             <img src="../recursos/puestasol.jpg" alt="puestasol">
                         </div>
-                        <div class="text">Puesta de sol</div>
+                        <div class="text">Sol</div>
                     </div>
                 </div>
 
