CSS Provisional, aún no responsive

--- a/secciones/Contacto.html
+++ b/secciones/Contacto.html
@@ -59,7 +59,7 @@
             <input type="radio" value="No_recibir" name="radio">-->
         </form>
     </main>
-    <!--Pie de página-->
+    <!--Pie de página "PROVISIONAL"-->
     <footer>
         <h3>Social Media</h3>
         <ol>
