Index 31/01, todo linkeado, falta mejorar background, footer y hacer responsive

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </video>
         </div>
     </main>
-    <!--Pie de página-->
+    <!--Pie de página "PROVISIONAL" -->
     <footer class="footer__index">
         <h3>Social Media</h3>
         <ol>
