--- a/secciones/Estética.html
+++ b/secciones/Estética.html
@@ -116,7 +116,7 @@
         </section>
 
     </main>
-    <!--Pie de página-->
+    <!--Pie de página "PROVISIONAL"-->
     <footer>
         <h3>Social Media</h3>
         <ol>
