--- a/secciones/Musica.html
+++ b/secciones/Musica.html
@@ -163,7 +163,7 @@
 </div>
   </section>
     </main>
-    <!--Pie de página-->
+    <!--Pie de página "PROVISIONAL"-->
     <footer>
       <h3>Social Media</h3>
       <ol>
