--- a/secciones/Origen.html
+++ b/secciones/Origen.html
@@ -80,7 +80,7 @@
       </div>
     </div>
     </main>
-    <!--Pie de página-->
+    <!--Pie de página "PROVISIONAL"-->
     <footer>
       <h3>Social Media</h3>
       <ol>
