CSS Provisiorio, falta responsive

--- a/secciones/Origen.html
+++ b/secciones/Origen.html
@@ -69,7 +69,7 @@
         <div>
           <h3>2011 y 2012</h3>
           <p>Entre 2011 y 2012, jóvenes artistas comenzaron a crear remixes de
-            canciones de los 70 y 80, mezclándolos con smooth jazz y música
+            canciones de los 70s y 80s, mezclándolos con smooth jazz y música
             lounge, creando un género nuevo y extraño, una especie de “música
             triste de ascensor”.<br />
             A través de Last.fm, Reddit, Bandcamp, Tumblr, 4chan y otros canales
