Background video del index ahora responsive y retoques en Origen.html

--- a/index.html
+++ b/index.html
@@ -1,71 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/estilos.css">
-    <link rel="stylesheet" href="./css/animate.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/estilos.css" />
+    <link rel="stylesheet" href="./css/animate.css" />
     <script src="js/wow.min.js" type="text/javascript"></script>
     <title>Welcome to VaporVibes!</title>
-</head>
-<body>
+  </head>
+  <body>
     <script>
-        new WOW().init();
-        </script>
+      new WOW().init();
+    </script>
     <!--Encabezado-->
     <header>
-        <!--Logo PNG-->
-        <a href="./index.html" class="box__logoTexto">
-            <img src="./recursos/logo.png" alt="Logo de la página" class="img__logo">
-            <h2 class="nombre__pagina">VaporVibes</h2>
-        </a>
-        <!--Navegación-->
-        <nav>
-            <a href="./index.html">Inicio</a>
-            <a href="./secciones/Origen.html">Origen</a>
-            <a href="./secciones/Musica.html">Música</a>
-            <a href="./secciones/Estética.html">Estética</a>
-            <a href="./secciones/Contacto.html">Contacto</a>
-        </nav>
+      <!--Logo PNG-->
+      <a href="./index.html" class="box__logoTexto">
+        <img
+          src="./recursos/logo.png"
+          alt="Logo de la página"
+          class="img__logo"
+        />
+        <h2 class="nombre__pagina">VaporVibes</h2>
+      </a>
+      <!--Navegación-->
+      <nav>
+        <a href="./index.html">Inicio</a>
+        <a href="./secciones/Origen.html">Origen</a>
+        <a href="./secciones/Musica.html">Música</a>
+        <a href="./secciones/Estética.html">Estética</a>
+        <a href="./secciones/Contacto.html">Contacto</a>
+      </nav>
     </header>
     <!--Contenido principal-->
     <main>
+      <section class="conteinerIndex">
         <div class="contenedor__textoIndex">
             <h1 class="titulo__index">¿Qué contenidos vas a encontrar?</h1>
-        </div>
-        <div class="box__subtituloIndex">
-            <p class="subtitulo__delIndex">VaporVibes, es una página dedicada a la cultura digital "Vaporwave". <br>
-                En este sitio encontrarás los matices más importantes de dicho movimiento
+          </div>
+          <div class="box__subtituloIndex">
+            <p class="subtitulo__delIndex">
+              VaporVibes, es una página dedicada a la cultura digital
+              "Vaporwave". <br />
+              En este sitio encontrarás los matices más importantes de dicho
+              movimiento
             </p>
-        </div>
-        <div class="btn__boxIndex">
+          </div>
+          <div class="btn__boxIndex">
             <a href="./secciones/Origen.html" target="_blank" class="btn-neon">
-                <span id="span1"></span>
-                <span id="span2"></span>
-                <span id="span3"></span>
-                <span id="span4"></span>
-                CONOCER MÁS
+              <span id="span1"></span>
+              <span id="span2"></span>
+              <span id="span3"></span>
+              <span id="span4"></span>
+              CONOCER MÁS
             </a>
-        </div>
+          </div>
         <div class="video__conteiner">
             <video autoplay muted loop class="backgroundvideo">
-                <source src="./recursos/backgroundvideo.mp4">
-            </video>
+                <source src="./recursos/backgroundvideo.mp4" />
+              </video>
         </div>
+      </section>
     </main>
     <!--Pie de página "PROVISIONAL" -->
     <footer class="footer__index">
-        <h3>Social Media</h3>
-        <ol>
-            <li>
-                <a href="https://www.instagram.com/franbacchiddu" target="_blank">Instagram</a>
-            </li>
-            <li>
-                <a href="https://www.youtube.com/channel/UCJU2Jyk8zLe4NfeGQlUgdlA" target="_blank">Youtube</a>
-            </li>
-        </ol>
+      <h3>Social Media</h3>
+      <ol>
+        <li>
+          <a href="https://www.instagram.com/franbacchiddu" target="_blank"
+            >Instagram</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://www.youtube.com/channel/UCJU2Jyk8zLe4NfeGQlUgdlA"
+            target="_blank"
+            >Youtube</a
+          >
+        </li>
+      </ol>
     </footer>
-</body>
+  </body>
 </html>
