--- a/secciones/Contacto.html
+++ b/secciones/Contacto.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="stylesheet" href="../css/animate.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"/>
     <script src="../js/wow.min.js" type="text/javascript"></script>
     <title>Contacto</title>
 </head>
@@ -14,21 +15,35 @@
         new WOW().init();
         </script>
       <!--Encabezado-->
-      <header>
-        <!--Logo PNG-->
-        <a href="../index.html" class="box__logoTexto">
-            <img src="../recursos/logo.png" alt="Logo de la página" class="img__logo">
-            <h2 class="nombre__pagina">VaporVibes</h2>
+    <nav class=" navbar navbar-expand-md bg">
+        <a class="navbar-brand ms-3 text-black" href="#">
+          <img src="../recursos/logo.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+          VaporVibes
         </a>
-        <!--Navegación-->
-        <nav>
-            <a href="../index.html">Inicio</a>
-            <a href="./Origen.html">Origen</a>
-            <a href="./Musica.html">Música</a>
-            <a href="./Estética.html">Estética</a>
-            <a href="./Contacto.html">Contacto</a>
-        </nav>
-    </header>
+        <button class="navbar-toggler me-3 text-white" type="button" data-bs-toggle="collapse" data-bs-target="#btn">
+          <i class="bx bx-menu bx-md"></i>
+        </button>
+        <div class="collapse navbar-collapse ul-bg" id="btn">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link mx-3 text-black fs-5" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link mx-3 text-black fs-5" href="../secciones/Origen.html">Origen</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link mx-3 text-black fs-5" href="../secciones/Musica.html">Música</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link mx-3 text-black fs-5" href="../secciones/Estética.html">Estética</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link mx-3 text-black fs-5" href="../secciones/Contacto.html">Contacto</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <!--Contenido principal-->
     <main class="conteiner__mainFormulario">
         <section class="banner-heroForm">
@@ -71,6 +86,6 @@
             </li>
         </ol>
     </footer>
-        
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script> 
 </body>
 </html>
