Todas las secciones e Index tienen Navbar responsive de bootstrap

--- a/secciones/Contacto.html
+++ b/secciones/Contacto.html
@@ -14,36 +14,36 @@
     <script>
         new WOW().init();
         </script>
-      <!--Encabezado-->
+     <!--Encabezado-->
     <nav class=" navbar navbar-expand-md bg">
-        <a class="navbar-brand ms-3 text-black" href="#">
-          <img src="../recursos/logo.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-          VaporVibes
-        </a>
-        <button class="navbar-toggler me-3 text-white" type="button" data-bs-toggle="collapse" data-bs-target="#btn">
-          <i class="bx bx-menu bx-md"></i>
-        </button>
-        <div class="collapse navbar-collapse ul-bg" id="btn">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link mx-3 text-black fs-5" href="../index.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link mx-3 text-black fs-5" href="../secciones/Origen.html">Origen</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link mx-3 text-black fs-5" href="../secciones/Musica.html">Música</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link mx-3 text-black fs-5" href="../secciones/Estética.html">Estética</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link mx-3 text-black fs-5" href="../secciones/Contacto.html">Contacto</a>
-            </li>
-          </ul>
-        </div>
+      <a class="navbar-brand fs-3 ms-3 text-black" href="#">
+        <img src="../recursos/logo.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+        VaporVibes
+      </a>
+      <button class="navbar-toggler me-3 text-white" type="button" data-bs-toggle="collapse" data-bs-target="#btn">
+        <i class='bx bx-menu bx-md'></i>
+      </button>
+      <div class="collapse navbar-collapse ul-bg" id="btn">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link mx-3 text-black fs-5" href="../index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link mx-3 text-black fs-5" href="../secciones/Origen.html">Origen</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link mx-3 text-black fs-5" href="../secciones/Musica.html">Música</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link mx-3 text-black fs-5" href="../secciones/Estética.html">Estética</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link mx-3 text-black fs-5" href="../secciones/Contacto.html">Contacto</a>
+          </li>
+        </ul>
       </div>
-    </nav>
+    </div>
+  </nav>
     <!--Contenido principal-->
     <main class="conteiner__mainFormulario">
         <section class="banner-heroForm">
