--- a/secciones/Musica.html
+++ b/secciones/Musica.html
@@ -17,12 +17,12 @@
       </script>
     <!--Encabezado-->
     <nav class=" navbar navbar-expand-md bg">
-      <a class="navbar-brand ms-3 text-black" href="#">
+      <a class="navbar-brand fs-3 ms-3 text-black" href="#">
         <img src="../recursos/logo.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
         VaporVibes
       </a>
       <button class="navbar-toggler me-3 text-white" type="button" data-bs-toggle="collapse" data-bs-target="#btn">
-        <i class="bx bx-menu bx-md"></i>
+        <i class='bx bx-menu bx-md'></i>
       </button>
       <div class="collapse navbar-collapse ul-bg" id="btn">
         <ul class="navbar-nav ms-auto">
