--- a/secciones/Contacto.html
+++ b/secciones/Contacto.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="stylesheet" href="../css/animate.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"/>
     <script src="../js/wow.min.js" type="text/javascript"></script>
     <title>Contacto</title>
@@ -50,29 +51,23 @@
         <h3 class="titulo__delFormulario">Interactúa con la página</h3>
         <h1 class="subtitulo__delFormulario">Si es de su interes ser notificado por nuevas publicaciones del sitio, complete el siguiente formulario</h1>
     </section>
-        <form action="#" method="get" class="formulario-conteiner">
-            <br><br>
-            <span>Campo 1</span>
-            <input type="text" placeholder="Nombre Completo" name="nombre" class="nombre__delFormulario">
-            <br><br>
-            <span>Campo 2</span>
-            <input type="text" placeholder="+549 (011) 34565642" name="tel" class="tel__delFormulario">
-            <br><br>
-            <span>Campo 3</span>
-            <input type="email" placeholder="correo@electronico" name="mail" class="mail__delFormulario">
-            <br><br>
-            <span class="texto__delSubmit">¿Desea recibir notificaciones vía mail de VaporVibes?</span>
-            <select name="VaporVibes">
-                <option value="V">SI</option>
-                <option value="F">NO</option>
-            </select>
-            <input type="submit" value="Enviar">
-            <!--Radio Buton (para rellenar un punto)-->
-            <!--<span>Recibir notificaciones</span> 
-            <input type="radio" value="Recibir_notificaciones" name="radio">
-            <span> No recibir notificaciones</span>
-            <input type="radio" value="No_recibir" name="radio">-->
-        </form>
+    <section class="formulario-conteiner">
+    <div class="seccion__contacto">
+      <div class="contact__info">
+        <div><i class="fa-solid fa-map-pin"></i>Argentina</div>
+        <div><i class="fa-solid fa-map-pin"></i>contact@gmail.com</div>
+        <div><i class="fa-solid fa-map-pin"></i>+00 0000 000 000</div>
+      </div>
+      <div class="contact__form">
+      <h2>Contactanos</h2>
+      <form class="contact" action="#" method="post">
+        <input type="text" name="name" class="text-box" placeholder="Tu nombre" required>
+        <input type="email" name="email" class="text-box" placeholder="Tu email" required>
+        <textarea name="message" rows="5" placeholder="Tu mensaje" required></textarea>
+        <input type="submit" name="submit" class="send-btn" value="Send">
+    </form>
+    </div>
+  </section>
     </main>
     <!--Pie de página "PROVISIONAL"-->
     <footer>
