--- a/secciones/Estética.html
+++ b/secciones/Estética.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/estilos.css">
-    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="../css/animate.css">
+    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"/>
     <script src="../js/wow.min.js" type="text/javascript"></script>
     <title>Estética</title>
@@ -132,15 +133,12 @@
     </main>
     <!--Pie de página "PROVISIONAL"-->
     <footer>
-        <h3>Social Media</h3>
-        <ol>
-            <li>
-                <a href="https://www.instagram.com/franbacchiddu" target="_blank">Instagram</a>
-            </li>
-            <li>
-                <a href="https://www.youtube.com/channel/UCJU2Jyk8zLe4NfeGQlUgdlA" target="_blank">Youtube</a>
-            </li>
-        </ol>
+        <img src="../recursos/logoFooter.png" alt="" class="logoFooter">
+        <div class="social-icons-container">
+          <a href="https://www.youtube.com/channel/UCJU2Jyk8zLe4NfeGQlUgdlA"><i class="fa-brands fa-youtube"></i></a>
+          <a href="https://www.instagram.com/franbacchiddu/?hl=es-la"><i class="fa-brands fa-square-instagram"></i></a>
+        </div>
+        <span class="copyright">&copy;2022, Franco Bacchiddu. All rights reserved.</span>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script> 
 </body>
