--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </main>
     <!--Pie de página "PROVISIONAL" -->
     <footer>
-      <img src="../recursos/logoFooter.png" alt="" class="logoFooter">
+      <img src="./recursos/logoFooter.png" alt="" class="logoFooter">
       <div class="social-icons-container">
         <a href="https://www.youtube.com/channel/UCJU2Jyk8zLe4NfeGQlUgdlA"><i class="fa-brands fa-youtube"></i></a>
         <a href="https://www.instagram.com/franbacchiddu/?hl=es-la"><i class="fa-brands fa-square-instagram"></i></a>
