Esto es una prueba con otro pc

--- a/index.html
+++ b/index.html
@@ -48,8 +48,6 @@
         </div>
       </div>
     </nav>
-    
-    
     <!--Contenido principal-->
     <main>
       <section class="conteinerIndex">
@@ -80,7 +78,7 @@
         </div>
       </section>
     </main>
-    <!--Pie de página "PROVISIONAL" -->
+    <!--Pie de página-->
     <footer>
       <img src="./recursos/logoFooter.png" alt="" class="logoFooter">
       <div class="social-icons-container">
