--- a/secciones/Contacto.html
+++ b/secciones/Contacto.html
@@ -69,7 +69,7 @@
     </div>
   </section>
     </main>
-    <!--Pie de página "PROVISIONAL"-->
+    <!--Pie de página-->
     <footer>
         <img src="../recursos/logoFooter.png" alt="" class="logoFooter">
         <div class="social-icons-container">
