--- a/secciones/Origen.html
+++ b/secciones/Origen.html
@@ -93,7 +93,7 @@
       </div>
     </div>
     </main>
-    <!--Pie de página "PROVISIONAL"-->
+    <!--Pie de página-->
     <footer>
       <img src="../recursos/logoFooter.png" alt="" class="logoFooter">
       <div class="social-icons-container">
