--- a/secciones/Estética.html
+++ b/secciones/Estética.html
@@ -131,7 +131,7 @@
                 </div>
         </section>
     </main>
-    <!--Pie de página "PROVISIONAL"-->
+    <!--Pie de página-->
     <footer>
         <img src="../recursos/logoFooter.png" alt="" class="logoFooter">
         <div class="social-icons-container">
