--- a/secciones/Musica.html
+++ b/secciones/Musica.html
@@ -175,7 +175,7 @@
 </div>
   </section>
     </main>
-    <!--Pie de página "PROVISIONAL"-->
+    <!--Pie de página-->
     <footer>
       <img src="../recursos/logoFooter.png" alt="" class="logoFooter">
       <div class="social-icons-container">
